display questions and andswers done

--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/@tabler/icons@latest/iconfont/tabler-icons.min.css"
+		/>
+		<link rel="stylesheet" href="/css/style.css" />
 	</head>
-	<body></body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-	</head>
-	<body></body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-	</head>
-	<body></body>
+	<body>
+		<div class="game-window">
+			<div class="game-tittle"><p>Milionerzy</p></div>
+			<div class="question"></div>
+			<button class="control-buttons btn-start">Graj</button>
+			<button class="control-buttons btn-exit">Rezygnuj</button>
+			<button class="control-buttons btn-confirm">Zatwierdź</button>
+			<div class="answers-container">
+				<div class="answer answerA"></div>
+				<div class="answer answerB"></div>
+				<div class="answer answerC"></div>
+				<div class="answer answerD"></div>
+			</div>
+		</div>
+		<script src="/js/main.js"></script>
+	</body>
 </html>
