Adding more functions to app in JavaScript

--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
 				<div class="answer answerC"></div>
 				<div class="answer answerD"></div>
 			</div>
+			<div class="award-stages">
+				<div class="stage stage1">500 zł</div>
+				<div class="stage stage2 stageGuaranted">1000 zł</div>
+				<div class="stage stage3">2000 zł</div>
+				<div class="stage stage4">5000 zł</div>
+				<div class="stage stage5">10 000 zł</div>
+				<div class="stage stage6">20 000 zł</div>
+				<div class="stage stage7 stageGuaranted">40 000 zł</div>
+				<div class="stage stage8">75 000 zł</div>
+				<div class="stage stage9">125 000 zł</div>
+				<div class="stage stage10">250 000 zł</div>
+				<div class="stage stage11">500 000 zł</div>
+				<div class="stage stage12">1 000 000 zł</div>
+			</div>
 		</div>
 		<script src="/js/main.js"></script>
 	</body>
