--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
 	</head>
 	<body>
 		<div class="game-window">
-			<div class="game-tittle"><p>Milionerzy</p></div>
-			<div class="question"></div>
-			<button class="control-buttons btn-start">Graj</button>
-			<button class="control-buttons btn-exit">Rezygnuj</button>
-			<button class="control-buttons btn-confirm">Zatwierdź</button>
-			<div class="answers-container">
-				<div class="answer answerA"></div>
-				<div class="answer answerB"></div>
-				<div class="answer answerC"></div>
-				<div class="answer answerD"></div>
+			<div class="game-container">
+				<div class="game-tittle"><p>Milionerzy</p></div>
+				<div class="question"></div>
+				<div class="buttons-container">
+					<button class="control-buttons btn-start">Graj</button>
+					<button class="control-buttons btn-exit">Rezygnuj</button>
+					<button class="control-buttons btn-confirm">Zatwierdź</button>
+				</div>
+
+				<div class="answers-container">
+					<div class="answer answerA"></div>
+					<div class="answer answerB"></div>
+					<div class="answer answerC"></div>
+					<div class="answer answerD"></div>
+				</div>
 			</div>
 			<div class="award-stages">
 				<div class="stage stage1">500 zł</div>
