Pop-op windows added and alerts has been removed

--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
 		<link rel="stylesheet" href="/css/style.css" />
 	</head>
 	<body>
+		<div class="pop-up fresh-game">
+			<p class="info-message"></p>
+			<p class="info-award"></p>
+			<p class="info-guaranted-award"></p>
+			<button class="control-buttons btn-pop-up"></button>
+		</div>
 		<div class="game-window">
 			<div class="game-container">
 				<div class="game-tittle"><p>Milionerzy</p></div>
 				<div class="question"></div>
 				<div class="buttons-container">
-					<button class="control-buttons btn-start">Graj</button>
 					<button class="control-buttons btn-exit">Rezygnuj</button>
 					<button class="control-buttons btn-confirm">Zatwierdź</button>
 				</div>
